--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "new_portfolio",
-  "version": "1.0.0",
-  "private": true,
-  "description": "Minimalist single-page data scientist portfolio built with React + Vite.",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview --strictPort --port 4173"
-  },
-  "dependencies": {
-    "@vercel/analytics": "^1.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.5.0",
-    "react-social-icons": "^6.25.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
-    "vite": "^5.4.20"
-  },
-  "engines": {
-    "node": ">=18"
-  }
+    "name": "new_portfolio",
+    "version": "1.0.0",
+    "private": true,
+    "description": "Minimalist single-page data scientist portfolio built with React + Vite.",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview --strictPort --port 4173",
+        "vercel-build": "vite build"
+    },
+    "dependencies": {
+        "@vercel/analytics": "^1.5.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-icons": "^5.5.0",
+        "react-social-icons": "^6.25.0"
+    },
+    "devDependencies": {
+        "@vitejs/plugin-react": "^4.3.1",
+        "vite": "^5.4.20"
+    },
+    "engines": {
+        "node": ">=18"
+    }
 }
